# usyd-learning-dev

./: .gitignore  README.md  mirror-to-dev.yaml
.github/workflows/: main.yml
src/: __init__.py
src-libs/: .pypirc - sample  pip.ini - sample  pyproject.toml.sample
src-libs/fl-algorithms/: pyproject.toml
src-libs/fl-algorithms/src/: fl-algorithms.sln
src-libs/fl-algorithms/src/fl_algorithms/: fl-algorithms.pyproj
src-libs/fl-algorithms/src/fl_algorithms/aggregation/: fed_server_aggregation_abc.py  fed_server_aggregation_args.py  fed_server_aggregation_facotry.py  fed_server_aggregation_method.py
src-libs/fl-algorithms/src/fl_algorithms/aggregation/methods/: _fed_aggregator_fedavg.py  _fed_aggregator_flexlora.py  _fed_aggregator_rbla.py
src-libs/fl-algorithms/src/fl_algorithms/selection/: fed_client_select_method.py  fed_client_selector.py  fed_client_selector_abc.py  fed_client_selector_base.py
src-libs/fl-algorithms/src/fl_algorithms/selection/methods/: _fed_client_selector_all.py  _fed_client_selector_high_loss.py  _fed_client_selector_random.py
src-libs/fl-algorithms/src/test/: test_fedavg_aggregator.py  unittest.pyproj
src-libs/ml-algorithms/: pyproject.toml
src-libs/ml-algorithms/src/: ml-algorithms.sln
src-libs/ml-algorithms/src/ml_algorithms/: matrix_approximator.py  ml-algorithms.pyproj
src-libs/ml-algorithms/src/ml_algorithms/lora/lora_implementation/: lora_linear.py
src-libs/ml-algorithms/src/ml_algorithms/model_adaptor/: __init__.py  model_adaptor_abc.py  model_adaptor_type.py
src-libs/ml-algorithms/src/ml_algorithms/model_extractor/: model_extractor_abc.py  model_extractor_src.py
src-libs/ml-algorithms/src/ml_algorithms/model_extractor/extractors/: advanced_model_extractor.py
src-libs/ml-algorithms/src/test/: test_fed_client_seletor.py
src-libs/ml-data-loader/: .gitignore  README.md  pyproject.toml
src-libs/ml-data-loader/design/: uml_design.eapx
src-libs/ml-data-loader/src/: ml-data-loader.sln  vs.code-workspace
src-libs/ml-fed-learn/: pyproject.toml
src-libs/ml-fed-learn/src/: ml-fed-learn.sln
src-libs/ml-models/: README.md  pyproject.toml
src-libs/ml-models/design/: uml_design.eapx
src-libs/ml-models/src/: ml-models.sln  vs.code-workspace
src-libs/ml-models/src/ml_models/: __init__.py  ml-models.pyproj  nn_model.py  nn_model_abc.py  nn_model_args.py  nn_model_args_abc.py  nn_model_factory.py  nn_model_type.py
src-libs/ml-models/src/ml_models/models/capstone_mlp/: _nn_model_capstone_mlp.py  nn_model_capstone_mlp_args.py
src-libs/ml-models/src/ml_models/models/cifar_convnet/: _nn_model_cifar_convnet.py  nn_model_cifar_convnet_args.py
src-libs/ml-models/src/ml_models/models/minist_nn_brenden/: _nn_model_mnist2NNBrenden.py  nn_model_mnist2NNBrenden_args.py
src-libs/ml-models/src/ml_models/models/simple_lora/: _nn_model_simple_lora_mlp.py  nn_model_simple_lora_mlp_args.py
src-libs/ml-models/src/ml_models/models/simple_mlp/: _nn_model_simple_mlp.py  nn_model_simple_mlp_args.py
src-libs/ml-models/src/test/: unittest.pyproj  unittest_models.py
src-libs/ml-simu-switcher/: pyproject.toml
src-libs/ml-simu-switcher/src/: ml-simu-switcher.sln
src-libs/ml-utils/: README.md  pyproject.toml
src-libs/ml-utils/src/: ml-utils.sln
src-libs/ml-utils/src/ml_utils/: __init__.py  config_dict_data_recorder.py  config_loader.py  filename_generator.py  filename_maker.py  loss_function_builder.py  metric_calculator.py  ml-utils.pyproj  optimizer_builder.py  training_logger.py
src-libs/ml-utils/src/test/: test_config_loader.py  test_filename_generator.py  test_optimizer_builder.py  test_training_logger.py  unittest.pyproj
src-libs/usyd-learning/src/: usyd-learning.sln  vs.code-workspace
src/dataset/: dataset_loader.py  dataset_loader_args.py  dataset_loader_factory.py  dataset_loader_util.py  dataset_type.py
src/dataset/loader/: dataset_loader_agnews.py  dataset_loader_cifar10.py  dataset_loader_cifar100.py  dataset_loader_dbpedia.py  dataset_loader_emnist.py  dataset_loader_fminst.py  dataset_loader_imagenet.py  dataset_loader_imdb.py  dataset_loader_kmnist.py  dataset_loader_minst.py  dataset_loader_qmnist.py  dataset_loader_stl10.py  dataset_loader_svhn.py  dataset_loader_yahooanswers.py
src/node/: client_node.py  node.py  node_type.py  server_node.py
src/test/: experiment_entrency.py  lora_sample_main.py  main.py  main_2.py  rbla_main.py  run_all.py  sp_main.py
src/test/fl_lora_sample/: imdb_test.yaml  kmnist_test.yaml  lora_sample_entry.py  practical_config.yaml  rbla_config.yaml  run_all.py  sample_app_entry_2.py  script_test-1.yaml  (+4 more)
src/unit_test/: unit_test.pyproj  unittest_handlers.py
src/unittest_ml/: unittest_aggregator_rbla.py  unittest_data_handler.py  unittest_data_loader.py  unittest_fed_client_seletor.py  unittest_matrix_approximator.py  unittest_ml.pyproj
src/usyd_learning/: usyd-learning.pyproj
(+338 files in other folders)
