[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
###
# Packaging directory
###
packages = ["src/fl_algorithms"]

[tool.hatch.build]
###
# Exclude files
###
exclude = [
  "/**/.*",
  "/**/*.code-workspace",
  "/**/test",
  "/**/*.sln",
  "/**/*.Caches",
  "/**/design",
  "/**/*.pyproj",
  "/**/*.pyproj.user",
]
ignore-vcs = false

[project]
###
# Package name
###
name = "fl-algorithms"

###
# Package version
###
version = "0.0.1"

###
# Package dependencies
###
dependencies = []

requires-python = ">=3.10"

###
# Package authors
###
authors = [
#  {name = "xxx", email = "xxx@example.com"},
#  {name = "xxx"},
#  {email = "different.person@example.com"},
]
maintainers = [
#  {name = "xxx", email = "xxx@example.com"}
]

###
# Package description
###
description = "FL algorithms"

readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["fl", "fed learn", "algorithms", "client selection", "server aggregation"]

classifiers = [
#  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]

[project.urls]

[project.scripts]

[project.gui-scripts]
