[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
###
# packing folder
###
packages = ["src/ml_models"]

[tool.hatch.build]
###
# Exclude files and directories
###
exclude = [
  "/**/.*",
  "/**/*.code-workspace",
  "/**/test",
  "/**/*.sln",
  "/**/*.Caches",
  "/**/design",
  "/**/*.pyproj",
  "/**/*.pyproj.user",
]
ignore-vcs = false

[project]
###
# Package name
###
name = "ml-models"

###
# Package version
###
version = "0.0.2"

###
# Package dependencies
###
dependencies = []

requires-python = ">=3.10"

###
# Package authors
###
authors = [
#  {name = "xxx", email = "xxx@example.com"},
#  {name = "xxx"},
#  {email = "different.person@example.com"},
]
maintainers = [
#  {name = "xxx", email = "xxx@example.com"}
]

###
# Package description
###
description = "ML Models"

readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["ml", "torch", "models"]

classifiers = [
#  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]

[project.urls]

[project.scripts]

[project.gui-scripts]
